Here's the commented version of the code:

```c++
# Copyright 2021 The gRPC Authors

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

from concurrent import futures
from typing import Any, Tuple

import gevent
import grpc

from src.proto.grpc.testing import messages_pb2
from src.proto.grpc.testing import test_pb2_grpc

# Constant defining sleep duration (in seconds) for long unary calls
LONG_UNARY_CALL_WITH_SLEEP_VALUE = 1

class TestServiceServicer(test_pb2_grpc.TestServiceServicer):
    """Implementation of gRPC TestService service methods."""
    
    def UnaryCall(self, request, context):
        """Handles simple unary RPC call without any delay.
        
        Args:
            request: The incoming request message
            context: gRPC servicer context
            
        Returns:
            A SimpleResponse message
        """
        return messages_pb2.SimpleResponse()

    def UnaryCallWithSleep(self, unused_request, unused_context):
        """Handles unary RPC call with an artificial delay.
        
        Args:
            unused_request: The incoming request message (not used)
            unused_context: gRPC servicer context (not used)
            
        Returns:
            A SimpleResponse message after sleeping for LONG_UNARY_CALL_WITH_SLEEP_VALUE seconds
        """
        gevent.sleep(LONG_UNARY_CALL_WITH_SLEEP_VALUE)
        return messages_pb2.SimpleResponse()

def start_test_server(port: int = 0) -> Tuple[str, Any]:
    """Starts a gRPC test server with TestService implementation.
    
    Args:
        port: The port number to bind to (0 means auto-select available port)
        
    Returns:
        A tuple containing:
        - server address string in format "localhost:port"
        - the server instance
    """
    # Create server with thread pool executor
    server = grpc.server(futures.ThreadPoolExecutor())
    servicer = TestServiceServicer()
    
    # Register TestService implementation with the server
    test_pb2_grpc.add_TestServiceServicer_to_server(
        TestServiceServicer(), server
    )

    # Add extra generic RPC handlers and start insecure port
    server.add_generic_rpc_handlers((_create_extra_generic_handler(servicer),))
    port = server.add_insecure_port("[::]:%d" % port)
    server.start()
    return "localhost:%d" % port, server

def _create_extra_generic_handler(servicer: TestServiceServicer) -> Any:
    """Creates additional generic RPC method handlers for the service.
    
    Args:
        servicer: The TestService servicer implementation
        
    Returns:
        A generic handler for additional RPC methods
    """
    # Define method handlers for additional RPC methods
    rpc_method_handlers = {
        "UnaryCallWithSleep": grpc.unary_unary_rpc_method_handler(
            servicer.UnaryCallWithSleep,
            request_deserializer=messages_pb2.SimpleRequest.FromString,
            response_serializer=messages_pb2.SimpleResponse.SerializeToString,
        )
    }
    return grpc.method_handlers_generic_handler(
        "grpc.testing.TestService", rpc_method_handlers
    )
```