Here's the commented version of the code snippet:

```python
# Copyright 2017 gRPC authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import argparse
import sys

import hyper  # HTTP/2 client library

if __name__ == "__main__":
    # Set up command line argument parser
    parser = argparse.ArgumentParser()
    # Add arguments for server host (default: localhost) and port (default: 8080)
    parser.add_argument("--server_host", type=str, default="localhost")
    parser.add_argument("--server_port", type=int, default=8080)
    
    # Parse command line arguments
    args = parser.parse_args()
    server_host = args.server_host
    server_port = args.server_port
    
    # Create HTTP/2 connection to specified server
    conn = hyper.HTTP20Connection("%s:%d" % (server_host, server_port))
    
    # Make POST request to gRPC test service endpoint
    conn.request("POST", "/grpc.testing.TestService/UnaryCall")
    
    # Get server response
    resp = conn.get_response()
    
    # Check if response contains gRPC encoding header
    # Exit with status 1 (error) if header is missing, 0 (success) if present
    if resp.headers.get("grpc-encoding") is None:
        sys.exit(1)  # gRPC encoding header not found
    else:
        sys.exit(0)  # gRPC encoding header found
```

Key additions:
1. Added description of the hyper import
2. Documented the argument parser setup and default values
3. Explained the HTTP/2 connection creation
4. Clarified the purpose of the POST request
5. Added clear comments about the response validation and exit status meanings
6. Maintained all original license information
7. Added comments explaining the control flow and decision points

The comments now provide context for each major operation while maintaining readability of the actual code.